[package]
name = "peer"
version = "0.1.0"
authors = ["pinnouse"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.6.3", features = ["edge"] }
rust-embed = "5.5.1"
bendy = "0.3.2"
byteorder = "1.3.4"
log = "0.4.8"
rust-crypto = "0.2.36"